tests/baselines/reference/newFunctionImplicitAny.errors.txt
tests/cases/compiler/newFunctionImplicitAny.ts(4,12): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== tests/cases/compiler/newFunctionImplicitAny.ts (1 errors) ====
    // No implicit any error given when newing a function (up for debate)
    
    function Test() { }
    var test = new Test();
               ~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.